--- a/demo/src/frontend/src/locales/zh/menus.json
+++ b/demo/src/frontend/src/locales/zh/menus.json
@@ -1,15 +1,10 @@
 {
   "home": "首页",
   "dashboard": "控制台",
-  "management": "管理页",
-  "version": "组件版本",
-  "p1": "一级页面",
-  "p2": "二级页面",
-  "dynamic": "动态参数",
-  "demos": "组件演示",
-  "table": "表格组件",
-  "form": "表单组件",
-  "organization": "组织机构",
-  "department": "部门管理",
-  "user": "用户管理"
+  "acl": "访问控制",
+  "users": "用户管理",
+  "role": "角色管理",
+  "permission": "权限管理",
+  "dictionary": "数据字典",
+  "version": "组件版本"
 }
