--- a/demo/src/frontend/src/locales/en/page.json
+++ b/demo/src/frontend/src/locales/en/page.json
@@ -25,5 +25,16 @@
         "placeholder": {}
       }
     }
+  },
+  "role": {
+    "notification": {}
+  },
+  "permission": {
+    "button": {
+      "notification": {
+        "success": ""
+      },
+      "alter": {}
+    }
   }
 }
