:sparkles: ACL 完成
Signed-off-by: Kerbores <kerbores@gmail.com>

--- a/demo/src/frontend/src/locales/en/page.json
+++ b/demo/src/frontend/src/locales/en/page.json
@@ -27,7 +27,8 @@
     }
   },
   "role": {
-    "notification": {}
+    "notification": {},
+    "permission": {}
   },
   "permission": {
     "button": {
@@ -36,5 +37,8 @@
       },
       "alter": {}
     }
+  },
+  "modal": {
+    "role": {}
   }
 }
