:sparkles: 数据字典完成
Signed-off-by: Kerbores <kerbores@gmail.com>

--- a/demo/src/frontend/src/locales/en/page.json
+++ b/demo/src/frontend/src/locales/en/page.json
@@ -40,5 +40,15 @@
   },
   "modal": {
     "role": {}
+  },
+  "group": {
+    "notification": {}
+  },
+  "dictionary": {
+    "code": {
+      "notification": {
+        "delete": {}
+      }
+    }
   }
 }
