--- a/demo/src/frontend/src/locales/zh/page.json
+++ b/demo/src/frontend/src/locales/zh/page.json
@@ -232,6 +232,10 @@
         "title": "确定删除数据 {name} ?"
       },
       "addChild": "添加下级"
+    },
+    "alter": {
+      "title": "操作提示",
+      "description": "数据字典操作可能引起系统功能错乱,请谨慎操作!"
     }
   }
 }
