:lock: spring security集成
Signed-off-by: Kerbores <kerbores@gmail.com>

--- a/demo/src/frontend/src/locales/en/page.json
+++ b/demo/src/frontend/src/locales/en/page.json
@@ -50,5 +50,12 @@
         "delete": {}
       }
     }
+  },
+  "login": {
+    "tab": {},
+    "user": {
+      "placement": {}
+    },
+    "button": {}
   }
 }
